# moveit_pro_sam3

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.build  README.md  package.xml
models/: model.yaml  sam3_decoder.pt  sam3_geometry_encoder.pt  sam3_text_encoder.pt  sam3_vision_encoder.pt
